# gmail-mcp

./: .gitignore  .mcp.json.example  README.md  install.sh
.claude-plugin/: plugin.json
server/: audit.py  auth.py  cli.py  gmail_client.py  pyproject.toml  server.py  storage.py
skills/gmail-usage/: SKILL.md
